--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -123,6 +123,7 @@ input.lobbysearch { font-size:18px; }
     background: rgba(20,59,82,0.5);
   border-bottom: 1px solid rgba(20,59,82,1);
   
+  h1 { color:white; }
   .logo-name {
     padding:5px 0px;
     color:white;
@@ -397,8 +398,13 @@ input.lobbysearch { font-size:18px; }
 .about-page {
   padding-top:130px;   
    &:extend(.bg-gradient);
-   min-height:100%;                               
-}  
+   min-height:100%;     
+
+  p, h1,h2,h3,h4,h5,h6 {
+    color:white;                          
+  }
+}
+
       
 // `7MM"""YMM       db        .g8""8q.   
 //   MM    `7      ;MM:     .dP'    `YM. 
