--- a/assets/views/about.mustache
+++ b/assets/views/about.mustache
@@ -26,18 +26,39 @@
         <div class="row">
       <div class="col-sm-6">
         
-        <h1>Donec ullamcorper nulla non metus auctor fringilla.</h1>
-        <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
-        <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
-        <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
-
+        <h2>
+        Der ZDF-Lobbyradar ist ein gemeinsames Projekt des
+Medieninnovationszentrums Babelsberg (MIZ), ZDF heute.de und
+OpenDataCity. Die Idee und das Konzept entstanden in den Köpfen von Jan
+Schneider, Dominik Wurnig und Michael Hartlep.
+</h2>
       </div>
             <div class="col-sm-6">
-        
-        <h1>Donec ullamcorper nulla non metus auctor fringilla.</h1>
-        <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
-        <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
-        <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
+            <br/>
+        <p>
+Jan Schneider studierte Online-Journalismus an der Hochschule Darmstadt.
+Nach dem Studium führte der Weg nach Berlin, wo er ein Volontariat bei
+der Produktionsfirma autoren(werk) absolvierte. Seitdem produziert Jan
+investigative Fernsehbeiträge und längere Dokus für das ZDF. Ab und zu
+reist er auch nach Irland, Tansania oder Bolivien und bringt Reisedokus
+für den SWR mit.
+</p><p>
+Michael Hartlep volontierte bei der Deutschen Welle, für die er heute
+Fernseh- und Onlinebeiträge erstellt. Außerdem arbeitet er bei der
+Nachrichtenagentur Reuters und produziert Online-Videos über Bayern
+München, islamische Terroristen und Goldfische. Wenn er es sich
+aussuchen könnte, würde Michael mehr zu Digitalem, wissenschaftlichen
+Sensationen und den Niederlanden machen, denn das sind seine
+Lieblingsthemen. Michael lebt und arbeitet als freier Journalist in Berlin.
+</p><p>
+Dominik Wurnig ist visueller Journalist. Als Kind wollte er
+Fußballkomentator im Fernsehen werden. Es stellte sich aber heraus, dass
+Politik viel spannender ist als Sport. Und so landete er nach Jahren
+beim Reality-Fernsehen in Wien als Datenjournalist bei der
+ORF-Nachrichtensendung ZiB2. Dort gestaltet Dominik vor allem Karten
+ferner Länder und andere bunte Diagramme. Angefeuert durch sein
+Journalismusstudium in New York setzt er visuelles Storytelling nun auch
+online um.</p>
 
       </div>
       </div>
