--- a/assets/views/nav-grey.mustache
+++ b/assets/views/nav-grey.mustache
@@ -23,7 +23,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><div class="share-button site-share"></div></li>
-				<li><a data-toggle="modal" data-target="#Extensions" href="#">Browser-Erweiterung</a></li>
+				<li><a data-toggle="modal" data-target="#Extensions" href="#">Download</a></li>
 				<li><a href="/faq">FAQ & Hilfe</a></li>
 				<li><a href="/about">Über das Projekt</a></li>
 				<li><a href="/abspann">Abspann</a></li>
@@ -39,8 +39,8 @@
 				<h4 class="modal-title">Die Lobbyradar Browsererweiterung</h4>
 			</div>
 			<div class="modal-body">
-				<p>Um den Zugriff auf die Lobbyradar-Datenbank noch weiter zu vereinfachen, gibt es die Browsererweiterung. Wenn Sie einmal installiert ist, werden auf allen aktivierten Seiten Namen, welche in der Lobbyradar-Datenbank hinterlegt sind, markiert. Wenn du mit der Maus über den Eintrag fährst, erscheint ein Popup-Fenster mit den jeweiligen Verbindungen. Ein Klick bringt dich direkt zur Lobbyradar-Website.</p>
-
+				<p>Mit der Browser-Erweiterung bekommen Sie die Informationen von Lobbyradar genau dort, wo Sie im Netz unterwegs sind. Einmal installiert, markiert Lobbyradar alle Personen und Organisationen, die in der Lobby-Datenbank hinterlegt sind. Wenn Sie mit der Maus über den Namen fahren, zeigt Lobbyradar die wichtigsten Infos aus unserer Datenbank. So wird so manche Nachricht und Geschichte in einen völlig neuen Kontext gesetzt. Kostenlos, transparent und ohne, dass Ihre Daten gespeichert werden.</p>
+<br/>
 				<div class="list-group">
 					<a href="#" class="list-group-item">
 						<img src="/assets/images/firefox_256x256.png" width="128" height="auto" alt="..." class="" style="float:left;">
