add buttons to extension download modal

--- a/assets/views/nav-grey.mustache
+++ b/assets/views/nav-grey.mustache
@@ -45,20 +45,29 @@
 					<a href="#" class="list-group-item">
 						<img src="/assets/images/firefox_256x256.png" width="128" height="auto" alt="..." class="" style="float:left;">
 						<h4 class="list-group-item-heading">Firefox</h4>
-						<p class="list-group-item-text">...</p>
+						<p class="list-group-item-text">		
+						<button class="hidden-xs btn-ext btn btn-info">
+				Installier dir den Durchblick für Firefox!
+			</button></p>
 						<br style="clear:both"/>
 				  </a>
 				  <a href="#" class="list-group-item">
 						<img src="/assets/images/chrome_256x256.png" width="128" height="auto" alt="..." class="" style="float:left;">
 						<h4 class="list-group-item-heading">Chrome</h4>
-						<p class="list-group-item-text">...</p>
+						<p class="list-group-item-text">		
+						<button class="hidden-xs btn-ext btn btn-info">
+				Installier dir den Durchblick für Chrome!
+			</button></p>
 						<br style="clear:both"/>
 
 					</a>
 					<a href="#" class="list-group-item">
 						<img src="/assets/images/safari_256x256.png" width="128" height="auto" alt="..." class="" style="float:left;">
 						<h4 class="list-group-item-heading">Safari</h4>
-						<p class="list-group-item-text">...</p>
+						<p class="list-group-item-text">		
+						<button class="hidden-xs btn-ext btn btn-info">
+				Installier dir den Durchblick für Safari!
+			</button></p>
 						<br style="clear:both"/>
 
 				  </a>
