--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -16,6 +16,17 @@
 
 
 
+.entypo-whatsapp.shown {
+  display:block!important;
+  a{
+    display: inline-block!important;
+    width: 100%!important;
+    height: 50px!important;
+    float: left!important;
+    margin-top: -40px!important;
+  }
+}
+
 * {  -webkit-font-smoothing: antialiased; }
 
 
@@ -200,7 +211,6 @@ input.lobbysearch { font-size:18px; }
     width:360px!important;
 
     .entypo-whatsapp { 
-      display:block!important;
       background:#0E9814;
 
       &:before {
