--- a/assets/views/nav-grey.mustache
+++ b/assets/views/nav-grey.mustache
@@ -43,7 +43,7 @@
 <br/>
 				<div class="list-group">
 					<a href="#" class="list-group-item">
-						<img src="/assets/images/firefox_256x256.png" width="128" height="auto" alt="..." class="" style="float:left;">
+						<img src="/assets/images/firefox_256x256.png" width="64" height="auto" alt="..." class="browser-logo" style="float:left;">
 						<h4 class="list-group-item-heading">Firefox</h4>
 						<p class="list-group-item-text">		
 						<button class="hidden-xs btn-ext btn btn-info">
@@ -52,7 +52,7 @@
 						<br style="clear:both"/>
 				  </a>
 				  <a href="#" class="list-group-item">
-						<img src="/assets/images/chrome_256x256.png" width="128" height="auto" alt="..." class="" style="float:left;">
+						<img src="/assets/images/chrome_256x256.png" width="64" height="auto" alt="..." class="browser-logo" style="float:left;">
 						<h4 class="list-group-item-heading">Chrome</h4>
 						<p class="list-group-item-text">		
 						<button class="hidden-xs btn-ext btn btn-info">
@@ -62,7 +62,7 @@
 
 					</a>
 					<a href="#" class="list-group-item">
-						<img src="/assets/images/safari_256x256.png" width="128" height="auto" alt="..." class="" style="float:left;">
+						<img src="/assets/images/safari_256x256.png" width="64" height="auto" alt="..." class="browser-logo" style="float:left;">
 						<h4 class="list-group-item-heading">Safari</h4>
 						<p class="list-group-item-text">		
 						<button class="hidden-xs btn-ext btn btn-info">
