--- a/assets/views/about.mustache
+++ b/assets/views/about.mustache
@@ -26,12 +26,12 @@
         <div class="row">
       <div class="col-sm-6">
         
-        <h2>
+        <h3>
         Der ZDF-Lobbyradar ist ein gemeinsames Projekt des
-Medieninnovationszentrums Babelsberg (MIZ), ZDF heute.de und
+Medien&shy;innovations&shy;zentrums Babelsberg (MIZ), ZDF heute.de und
 OpenDataCity. Die Idee und das Konzept entstanden in den Köpfen von Jan
 Schneider, Dominik Wurnig und Michael Hartlep.
-</h2>
+</h3>
       </div>
             <div class="col-sm-6">
             <br/>
