--- a/assets/views/nav-blue.mustache
+++ b/assets/views/nav-blue.mustache
@@ -3,11 +3,11 @@
 		<div class="row">
 			<div class="col-sm-3 col-xs-12 hidden-xs">
 				<a class="logo-name" href="/">    
-					<img class="zdf-logo-lobbyradar" src="/assets/images/zdf-lobbyradar-logo.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo.png';this.onerror=null;" alt="ZDF" width="240" height="auto">
+					<img class="zdf-logo-lobbyradar img-responsive" src="/assets/images/zdf-lobbyradar-logo.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo.png';this.onerror=null;" alt="ZDF" >
 				</a>
 			</div>
 			<div class="col-sm-2 hidden-xs">
-				<img class="miz-logo" src="/assets/images/logo-miz.png" alt="MIZ" width="auto" height="60">
+				<img class="miz-logo img-responsive" src="/assets/images/logo-miz.png" alt="MIZ" >
 			</div>
 			<div class="col-sm-6 col-sm-offset-1 col-xs-12">
 				<form class="search-form" role="form">
