--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -298,6 +298,7 @@
 // Small screen / tablet
 //** Deprecated `@screen-sm` as of v3.0.1
 @screen-sm:                  768px;
+
 @screen-sm-min:              @screen-sm;
 //** Deprecated `@screen-tablet` as of v3.0.1
 @screen-tablet:              @screen-sm-min;
@@ -332,7 +333,7 @@
 @grid-gutter-width:         30px;
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
-@grid-float-breakpoint:     @screen-sm-min;
+@grid-float-breakpoint:     @screen-md-min;
 //** Point at which the navbar begins collapsing.
 @grid-float-breakpoint-max: (@grid-float-breakpoint - 1);
 
