--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -123,6 +123,7 @@ input.lobbysearch { font-size:18px; }
   .miz-logo {
     float:left!important;
     margin-top:10px;
+    max-width: 140px;
   }
 .zdf-header-blue {
   top:46px;
@@ -145,7 +146,7 @@ input.lobbysearch { font-size:18px; }
 
       img {
         margin:25px 0px 0px 0px;
-        max-width:150px;
+        // max-width:150px;
       }
       // margin: -80px 0px 0px 40px;
       // margin: -80px 0px 0px 40px; // only needed with fa-stack)
