--- a/assets/views/header.mustache
+++ b/assets/views/header.mustache
@@ -20,7 +20,7 @@
 	<script type="text/javascript" src="/assets/js/lobbyradar.js"></script>
 
 	<script type="text/javascript" src="/assets/js/moment-with-locales.min.js"></script>
-	<script type="text/javascript" src="http://lobbyradar.opendatacloud.de/lobbynetwork/node_positions.js"></script>
+	<script type="text/javascript" src="http://lobbyradar.opendatacloud.de/lobbynetwork/graph.js"></script>
 
 	<!-- viewport -->
 	<meta name="viewport" content="width=device-width">
