move script tag

--- a/assets/views/index.mustache
+++ b/assets/views/index.mustache
@@ -33,5 +33,6 @@
 </div> {{! end .fullscreen }}
 
 <script type="text/javascript" src="/assets/js/leaflet.js"></script>
+<script type="text/javascript" src="http://lobbyradar.opendatacloud.de/lobbynetwork/graph.js"></script>
 <script type="text/javascript" src="/assets/js/networkviz.js"></script>
 {{>footer}}
