station: tags hinzufügen/entfernen in massen

--- a/station/assets/css/index.css
+++ b/station/assets/css/index.css
@@ -113,6 +113,10 @@ body {
 	font-size: 0.8em;
 }
 
+.headline .checkbox {
+	display:inline-block;
+}
+
 .navbar-brand {
 	font-size: 30px;
 	font-family: "Roboto Slab";
