--- a/station/assets/css/index.css
+++ b/station/assets/css/index.css
@@ -147,6 +147,9 @@ body {
 	border-radius: 3px;
 	text-align: center;
 	z-index: 100;
+	-webkit-box-shadow: 2px 10px 33px -15px rgba(0,0,0,0.75);
+	-moz-box-shadow: 2px 10px 33px -15px rgba(0,0,0,0.75);
+	box-shadow: 2px 10px 33px -15px rgba(0,0,0,0.75);
 }
 
 .missinginput {
